--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ compose-bom = "2023.08.00"
 org-jetbrains-kotlin-jvm = "1.9.0"
 appcompat = "1.6.1"
 material = "1.9.0"
+lifecycle_version = "2.7.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -31,6 +32,8 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 retrofit =  { group = "com.squareup.retrofit2", name = "retrofit", version = "2.9.0" }
 kotlinx-serialization-json =  { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "1.6.3" }
+lifecycle-viewmodel-compose = {group = "androidx.lifecycle", name ="lifecycle-viewmodel-compose", version = "lifecycle_version"}
+lifecycle-runtime-compose = {group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version = "lifecycle_version"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
