--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,19 +1,22 @@
 [versions]
-agp = "8.2.2"
+agp = "8.3.1"
 kotlin = "1.9.0"
-core-ktx = "1.10.1"
+core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.1"
-activity-compose = "1.7.0"
-compose-bom = "2023.08.00"
+lifecycle-runtime-ktx = "2.7.0"
+activity-compose = "1.8.2"
+compose-bom = "2024.03.00"
 org-jetbrains-kotlin-jvm = "1.9.0"
 appcompat = "1.6.1"
-material = "1.9.0"
-lifecycle_version = "2.7.0"
+material = "1.11.0"
+lifecycle-version = "2.7.0"
+hilt-android = "2.49"
+hilt-navigation-compose = "1.2.0"
 
 [libraries]
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt-navigation-compose" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
@@ -32,8 +35,11 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 retrofit =  { group = "com.squareup.retrofit2", name = "retrofit", version = "2.9.0" }
 kotlinx-serialization-json =  { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "1.6.3" }
-lifecycle-viewmodel-compose = {group = "androidx.lifecycle", name ="lifecycle-viewmodel-compose", version = "lifecycle_version"}
-lifecycle-runtime-compose = {group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version = "lifecycle_version"}
+kotlinx-serialization-json-converter =  { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version = "1.0.0" }
+lifecycle-viewmodel-compose = {group = "androidx.lifecycle", name ="lifecycle-viewmodel-compose", version.ref = "lifecycle-version"}
+lifecycle-runtime-compose = {group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle-version"}
+dagger-hilt-android-compiler = {group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-android"}
+hilt-android = {group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -41,5 +47,6 @@ kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org-jetbrains-kotlin-jvm" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt-android"}
 
 
