--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -40,6 +40,7 @@ lifecycle-viewmodel-compose = {group = "androidx.lifecycle", name ="lifecycle-vi
 lifecycle-runtime-compose = {group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle-version"}
 dagger-hilt-android-compiler = {group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-android"}
 hilt-android = {group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android"}
+coil-compose = {group = "io.coil-kt", name = "coil-compose", version = "2.6.0"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
