--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.3.1"
 kotlin = "1.9.0"
-core-ktx = "1.12.0"
+#core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
@@ -9,11 +9,12 @@ lifecycle-runtime-ktx = "2.7.0"
 activity-compose = "1.8.2"
 compose-bom = "2024.03.00"
 lottie-compose = "6.3.0"
+compose-compiler = "1.5.1"
 media3-exoplayer = "1.3.0"
 navigation-compose = "2.7.7"
 org-jetbrains-kotlin-jvm = "1.9.0"
-appcompat = "1.6.1"
-material = "1.11.0"
+#appcompat = "1.6.1"
+#material = "1.11.0"
 lifecycle-version = "2.7.0"
 hilt-android = "2.49"
 hilt-navigation-compose = "1.2.0"
@@ -25,7 +26,7 @@ androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", versi
 androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3-exoplayer" }
 androidx-media3-hls = { module = "androidx.media3:media3-exoplayer-hls", version.ref = "media3-exoplayer" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+#core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
@@ -40,8 +41,8 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+#appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+#material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 retrofit =  { group = "com.squareup.retrofit2", name = "retrofit", version = "2.9.0" }
 kotlinx-serialization-json =  { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "1.6.3" }
 kotlinx-serialization-json-converter =  { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version = "1.0.0" }
@@ -51,6 +52,10 @@ dagger-hilt-android-compiler = {group = "com.google.dagger", name = "hilt-androi
 hilt-android = {group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-android"}
 coil-compose = {group = "io.coil-kt", name = "coil-compose", version = "2.6.0"}
 
+# Dependencies of the included build-logic
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -58,5 +63,6 @@ org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "org
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt-android"}
+spotless = "com.diffplug.spotless:6.20.0"
 
 
