--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Android CI/CD
 
 on:
   push:
@@ -23,6 +23,15 @@ jobs:
         distribution: 'adopt'
         java-version: '17'
 
+    - name: Cache Gradle packages
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: ${{ runner.os }}-gradle
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
@@ -31,3 +40,12 @@ jobs:
 
     - name: Run unit tests
       run: ./gradlew test
+
+    - name: Build APK
+      run: ./gradlew assembleRelease
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: apk
+        path: app/build/outputs/apk/release/app-release.apk
