Changing env variable values for keystore

--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -43,7 +43,7 @@ jobs:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
-          KEY_STORE_FILE_PATH: ${{ github.workspace }}/app/keystore.jks
+          KEY_STORE_FILE_PATH: keystore.jks
 
       - name: Run unit tests
         run: ./gradlew test
@@ -54,7 +54,7 @@ jobs:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEY_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
-          KEY_STORE_FILE_PATH: ${{ github.workspace }}/app/keystore.jks
+          KEY_STORE_FILE_PATH: keystore.jks
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2
