--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,8 @@ media3-exoplayer = "1.3.0"
 navigation-compose = "2.7.7"
 org-jetbrains-kotlin-jvm = "1.9.0"
 #appcompat = "1.6.1"
-#material = "1.11.0"
+material3 = "1.3.1"
+compose-material = "1.7.6"
 lifecycle-version = "2.7.0"
 hilt-android = "2.49"
 hilt-navigation-compose = "1.2.0"
@@ -40,9 +41,8 @@ ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-material3 = { group = "androidx.compose.material3", name = "material3" }
-#appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-#material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+compose-material = { module = "androidx.compose.material:material", version.ref = "compose-material" }
 retrofit =  { group = "com.squareup.retrofit2", name = "retrofit", version = "2.9.0" }
 kotlinx-serialization-json =  { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version = "1.6.3" }
 kotlinx-serialization-json-converter =  { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version = "1.0.0" }
